--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <p>Hello world YRAAAAAAA</p>
+  
 </body>
 </html>
+<script src="js/script.js"></script>
